--- a/guide_pages/styleguide_components.html
+++ b/guide_pages/styleguide_components.html
@@ -249,6 +249,16 @@
                                     </ul>
                                 </div>
                             </div>
+                            <br>
+                            <div class="select_div up" style="width:200px;">
+                                <button class="select_btn">Select Uplist</button>
+                                <div class="select_list">
+                                    <ul>
+                                        <li><a href="#">TEXT TEXT1</a></li>
+                                        <li><a href="#">TEXT TEXT2</a></li>
+                                    </ul>
+                                </div>
+                            </div>
 
                             <br>
                             <h4>Multi Select Box</h4>
