--- a/guide_pages/toastmessage.html
+++ b/guide_pages/toastmessage.html
@@ -49,7 +49,7 @@
 
                     <!-- 성공 Toast -->
                     <div class="toast_message toast_popup bg-status-green" id="toastpopupSuccess">
-                        <i class="ico_favorite"></i>
+                        <i class="ico_success"></i>
                         <p class="body16M fc-100">성공 메세지 텍스트</p>
                     </div>
                     <!-- //성공 Toast -->
@@ -71,7 +71,7 @@
                     <div style="font-size:16px;font-weight:700;padding-left:70px;margin-bottom:16px;">- 실패</div>
 
                     <!-- 실패 Toast -->
-                    <div class="toast_message toast_popup bg-status-red" id="toastpopupSuccess">
+                    <div class="toast_message toast_popup bg-status-red" id="toastpopupFail">
                         <i class="ico_fail"></i>
                         <p class="body16M fc-100">실패 메세지 텍스트</p>
                     </div>
@@ -83,7 +83,7 @@
                     <div style="font-size:16px;font-weight:700;padding-left:70px;margin-bottom:16px;">- 경고</div>
 
                     <!-- 경고 Toast -->
-                    <div class="toast_message toast_popup bg-status-yellow" id="toastpopupSuccess">
+                    <div class="toast_message toast_popup bg-status-yellow" id="toastpopupWarning">
                         <i class="ico_block"></i>
                         <p class="body16M fc-100">경고메세지 텍스트</p>
                     </div>
