--- a/pages/SC_ADMIN_002.html
+++ b/pages/SC_ADMIN_002.html
@@ -432,7 +432,7 @@
 
                     <li class="table">
                         <div class="th form-tit tit2">
-                            <p class="list-dot body14B">목적</p>
+                            <p class="list-dot body14B">설명</p>
                         </div>
                         <div class="td form-div">
                             <div class="textarea_div">
