--- a/pages/SC_ADMIN_102.html
+++ b/pages/SC_ADMIN_102.html
@@ -255,7 +255,7 @@
                         </div>
                         <div class="td form-div">
                             <!-- 이미지 등록 컴포넌트-->
-                            <div class="imgUploader imgSize-123"> <!-- 기본이미지 등록컴포넌트는 'imgSize-123'이 들어가지않습니다. 각 올려지는 이미지크기에 맞게 size-??? 클래스가 추가됩니다.-->
+                            <div class="imgUploader">
                                 <ul class="imgList">
                                     <li>
                                         <input type="file" id="btn_imgUp" onchange="readURL(this);">
@@ -270,7 +270,7 @@
                                 <div class="guideTxt">
                                     <p class="body14R">1level은 경영 매뉴얼 메인 화면에 디렉토리로 표시됩니다.<br>
                                         함께 출력될 이미지를 등록해 주십시오.</p>
-                                    <span class="summary12R">※ 123 X 123 pixel의 gif 형식</span>
+                                    <span class="summary12R">※ 56 X 56 pixel의 gif 형식</span>
                                 </div>
                             </div>
                             <!-- //이미지 등록 컴포넌트-->
