--- a/pages/SC_ADMIN_506.html
+++ b/pages/SC_ADMIN_506.html
@@ -630,9 +630,16 @@
                                 <div class="td form-div">
                                     <div class="flex items-center">
                                         <div class="ipt_pre w100">
-                                            <pre contenteditable="true">
+                                            <div>
+                                                <pre contenteditable="true">
 [표준관리시스템] <span class="var">{상신자이름}</span>님이 <span class="var">{표준종류}</span>의 <span class="var">{하위표준 종류}</span> 문
-서의 결재를 요청했습니다.</pre>
+서의 결재를 요청했습니다.
+결재를 요청했습니다.
+결재를 요청했습니다.
+결재를 요청했습니다.
+결재를 요청했습니다.
+</pre>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
@@ -673,9 +680,11 @@
                                 <div class="td form-div">
                                     <div class="flex items-center">
                                         <div class="ipt_pre w100">
-                                            <pre contenteditable="true">
+                                            <div>
+                                                <pre contenteditable="true">
 [표준관리시스템] <span class="var">{상신자이름}</span>님이 <span class="var">{표준종류}</span>의 <span class="var">{하위표준 종류}</span> 문
 서의 결재를 요청했습니다.</pre>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
