--- a/admin_sitemap.html
+++ b/admin_sitemap.html
@@ -324,7 +324,7 @@
               </div>
             </li>
             <li class="bg1">
-              <span class="sub-title">담당 부서 삭제된 표준 목록></span>
+              <span class="sub-title">담당 부서 삭제된 표준 목록</span>
               <div class="btn-wrap">
                 <a href="pages/SC_ADMIN_008.html" target="viewer">SC_ADMIN_008.html</a>
                 <a href="pages/SC_ADMIN_008.html" target="_blank" class="new-win">새창</a>
@@ -362,7 +362,7 @@
               </div>
             </li>
             <li class="bg1"> 
-              <span class="sub-title">경영 매뉴얼 결재 모니터링></span>
+              <span class="sub-title">경영 매뉴얼 결재 모니터링<em>table 추가필요</em></span>
               <div class="btn-wrap">
                 <a href="pages/SC_ADMIN_103.html" target="viewer">SC_ADMIN_103.html</a>
                 <a href="pages/SC_ADMIN_103.html" target="_blank" class="new-win">새창</a>
@@ -373,14 +373,14 @@
           <h2>시스템관리 [수급업체 작업표준]</h2>
           <ul>
             <li class="bg1"> 
-              <span class="sub-title">수급업체 작업표준 결재 모니터링><em>table 추가필요</em></span>
+              <span class="sub-title">수급업체 작업표준 결재 모니터링<em>table 추가필요</em></span>
               <div class="btn-wrap">
                 <a href="pages/SC_ADMIN_201.html" target="viewer">SC_ADMIN_201.html</a>
                 <a href="pages/SC_ADMIN_201.html" target="_blank" class="new-win">새창</a>
               </div>
             </li>
             <li class="bg1"> 
-              <span class="sub-title">폐기된 표준 목록></span>
+              <span class="sub-title">폐기된 표준 목록</span>
               <div class="btn-wrap">
                 <a href="pages/SC_ADMIN_202.html" target="viewer">SC_ADMIN_202.html</a>
                 <a href="pages/SC_ADMIN_202.html" target="_blank" class="new-win">새창</a>
@@ -397,7 +397,7 @@
           <h2>시스템관리 [인증기록 분류 체계]</h2>
           <ul>
             <li class="bg1"> 
-              <span class="sub-title">인증 기록 - 분류 체계></span>
+              <span class="sub-title">인증 기록 - 분류 체계</span>
               <div class="btn-wrap">
                 <a href="pages/SC_ADMIN_301.html" target="viewer">SC_ADMIN_301.html</a>
                 <a href="pages/SC_ADMIN_301.html" target="_blank" class="new-win">새창</a>
@@ -424,7 +424,7 @@
           <h2>시스템관리 [시스템관리]</h2>
           <ul>
             <li class="bg1"> 
-              <span class="sub-title">부서 및 사용자 관리></span>
+              <span class="sub-title">부서 및 사용자 관리</span>
               <div class="btn-wrap">
                 <a href="pages/SC_ADMIN_501.html" target="viewer">SC_ADMIN_501.html</a>
                 <a href="pages/SC_ADMIN_501.html" target="_blank" class="new-win">새창</a>
@@ -438,14 +438,21 @@
               </div>
             </li>
             <li class="bg1"> 
-              <span class="sub-title">사용자 - 속성 조회 ></span>
+              <span class="sub-title">사용자 - 속성 조회</span>
               <div class="btn-wrap">
                 <a href="pages/SC_ADMIN_503.html" target="viewer">SC_ADMIN_503.html</a>
                 <a href="pages/SC_ADMIN_503.html" target="_blank" class="new-win">새창</a>
               </div>
             </li>
             <li class="bg1"> 
-              <span class="sub-title">시스템 그룹 관리 ></span> 
+              <span class="sub-title">부서 등록</span>
+              <div class="btn-wrap">
+                <a href="pages/SC_ADMIN_503_2.html" target="viewer">SC_ADMIN_503_2.html</a>
+                <a href="pages/SC_ADMIN_503_2.html" target="_blank" class="new-win">새창</a>
+              </div>
+            </li>
+            <li class="bg1"> 
+              <span class="sub-title">시스템 그룹 관리</span> 
               <div class="btn-wrap">
                 <a href="pages/SC_ADMIN_504.html" target="viewer">SC_ADMIN_504.html</a>
                 <a href="pages/SC_ADMIN_504.html" target="_blank" class="new-win">새창</a>
